# kwargspp

./: .bazelrc  .pre-commit-config.yaml  LICENSE  MODULE.bazel  README.md
.github/workflows/: pre-commit.yml  test.yml
kwargspp/: BUILD.bazel  kwargs.hpp
tests/: BUILD.bazel  basic_example.cpp  default_example.cpp  internal_test.cpp  kwargs_test.cpp  typed_example.cpp
